--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <input type="text" v-model="newItem">
                 <input type="submit" value="Add">
             </form> -->
-        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
         <script src="js/main.js"></script>
     </body>
 </html> 
