--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <ul id="myFild"> 
                         <li v-for="(myTalk,index) in myTalks">
                             <span :class="{done: myTalk.isDOne}">{{myTalk.title}}</span>
-                            <span @click="deleteItem(index)">[X]</span>
+                            <span @click="deleteItem(index)" class="command">[X]</span>
                         </li> 
                     </ul>            
                     <form @submit.prevent="addMymessage">
@@ -34,7 +34,7 @@
                     <ul id="yourFild">
                         <li v-for="(yourTalk,index) in yourTalks">
                             <span :class="{done: yourTalk.isDOne}">{{yourTalk.title}}</span>
-                            <span @click="deleteItem2(index)">[X]</span>
+                            <span @click="deleteItem2(index)" class="command">[X]</span>
                         </li>
                     </ul>
                     <form @submit.prevent="addOthermessage">
