--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </section>
-            </form> -->
+            </form>
         <script src="js/main.js"></script>
         <script src="js/vue.min.js"></script>
     </body>
