--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <ul>
                         <li id="myFild">
                             <div class="pic">
-                                <img src="img/cat.png" alt="">
+                                <img src="img/girl.png" alt="">
                             </div>
                             <p class="name">あなたのチャット</p> 
                             <div v-for="(myTalk,index) in myTalks" class="text">
@@ -33,7 +33,7 @@
 
                         <li id="yourFild">                        
                             <div class="pic">
-                                <img src="img/dog.png" alt="">
+                                <img src="img/girl_2.png" alt="">
                             </div>
                             <p class="name">相手のチャット</p> 
                             <div v-for="(yourTalk,index) in yourTalks" class="text">
